--- a/PrintIngredientsList/PrintIngredientsList.csproj
+++ b/PrintIngredientsList/PrintIngredientsList.csproj
@@ -150,7 +150,7 @@
     <Compile Include="PDF\OutputPDF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tools\GraphicHelper.cs" />
+    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="FormEditIngredients.resx">
       <DependentUpon>FormEditIngredients.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,6 +178,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tools\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
