--- a/PrintIngredientsList/app.config
+++ b/PrintIngredientsList/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="PrintIngredientsList.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -21,4 +26,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <PrintIngredientsList.Properties.Settings>
+      <setting name="WinLocX" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="WinLocY" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="WinSizeW" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="WinSizeH" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="SplitDistance" serializeAs="String">
+        <value>457</value>
+      </setting>
+    </PrintIngredientsList.Properties.Settings>
+  </userSettings>
 </configuration>
