不具合修正。 印刷プレビュー画面のサイズ、ズーム情報保存と再現 ラベル項目行高さ設定項目追加

--- a/PrintIngredientsList/Properties/Settings.settings
+++ b/PrintIngredientsList/Properties/Settings.settings
@@ -17,5 +17,20 @@
     <Setting Name="SplitDistance" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">457</Value>
     </Setting>
+    <Setting Name="PrintPreviewDlgLocX" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PrintPreviewDlgLocY" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PrintPreviewDlgSizeW" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PrintPreviewDlgSizeH" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PrintPreviewDlgZoom" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
