--- a/PrintIngredientsList/app.config
+++ b/PrintIngredientsList/app.config
@@ -43,6 +43,21 @@
       <setting name="SplitDistance" serializeAs="String">
         <value>457</value>
       </setting>
+      <setting name="PrintPreviewDlgLocX" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="PrintPreviewDlgLocY" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="PrintPreviewDlgSizeW" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="PrintPreviewDlgSizeH" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="PrintPreviewDlgZoom" serializeAs="String">
+        <value>1</value>
+      </setting>
     </PrintIngredientsList.Properties.Settings>
   </userSettings>
 </configuration>
