--- a/PrintIngredientsList/PrintIngredientsList.csproj
+++ b/PrintIngredientsList/PrintIngredientsList.csproj
@@ -144,6 +144,12 @@
     <Compile Include="FormEditIngredients.Designer.cs">
       <DependentUpon>FormEditIngredients.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormEditPrintStartPos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEditPrintStartPos.Designer.cs">
+      <DependentUpon>FormEditPrintStartPos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +165,13 @@
     <Compile Include="FormSaveDatReferctor.Designer.cs">
       <DependentUpon>FormSaveDatReferctor.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormUpdateLicense.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUpdateLicense.Designer.cs">
+      <DependentUpon>FormUpdateLicense.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Network.cs" />
     <Compile Include="PrintSettingData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -166,11 +179,17 @@
     <EmbeddedResource Include="FormEditIngredients.resx">
       <DependentUpon>FormEditIngredients.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormEditPrintStartPos.resx">
+      <DependentUpon>FormEditPrintStartPos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSaveDatReferctor.resx">
       <DependentUpon>FormSaveDatReferctor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUpdateLicense.resx">
+      <DependentUpon>FormUpdateLicense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
