--- a/LicenseManager/LicenseManager.csproj
+++ b/LicenseManager/LicenseManager.csproj
@@ -53,6 +53,7 @@
     <Compile Include="..\PrintIngredientsList\Network.cs">
       <Link>Network.cs</Link>
     </Compile>
+    <Compile Include="Const.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
