--- a/PrintIngredientsList/packages.config
+++ b/PrintIngredientsList/packages.config
@@ -20,4 +20,5 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
