いろいろ修正

--- a/PrintIngredientsList/app.config
+++ b/PrintIngredientsList/app.config
@@ -58,6 +58,9 @@
       <setting name="PrintPreviewDlgZoom" serializeAs="String">
         <value>1</value>
       </setting>
+      <setting name="LabelLayoutPreviewSlpitDistance" serializeAs="String">
+        <value>210</value>
+      </setting>
     </PrintIngredientsList.Properties.Settings>
   </userSettings>
 </configuration>
