--- a/PrintIngredientsList/Properties/Settings.settings
+++ b/PrintIngredientsList/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="PrintPreviewDlgZoom" Type="System.Double" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="LabelLayoutPreviewSlpitDistance" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">210</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
