--- a/PrintIngredientsList/PrintIngredientsList.csproj
+++ b/PrintIngredientsList/PrintIngredientsList.csproj
@@ -182,6 +182,12 @@
     <Compile Include="Excel\ExcelReader.cs" />
     <Compile Include="Excel\CommonDefReader.cs" />
     <Compile Include="Excel\ProductReader.cs" />
+    <Compile Include="FormPrintPreview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPrintPreview.Designer.cs">
+      <DependentUpon>FormPrintPreview.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLabelTypeBlockIItemDetail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -222,6 +228,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
+    <EmbeddedResource Include="FormPrintPreview.resx">
+      <DependentUpon>FormPrintPreview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLabelTypeBlockIItemDetail.resx">
       <DependentUpon>FormLabelTypeBlockIItemDetail.cs</DependentUpon>
     </EmbeddedResource>
