--- a/PrintIngredientsList/PrintIngredientsList.csproj
+++ b/PrintIngredientsList/PrintIngredientsList.csproj
@@ -219,10 +219,16 @@
     <Compile Include="FormLicenseMng.Designer.cs">
       <DependentUpon>FormLicenseMng.cs</DependentUpon>
     </Compile>
+    <Compile Include="FromSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FromSetting.Designer.cs">
+      <DependentUpon>FromSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="License\License.cs" />
     <Compile Include="Network.cs" />
     <Compile Include="PrintLayout.cs" />
-    <Compile Include="PrintSettingData.cs" />
+    <Compile Include="AppSettingData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
@@ -243,6 +249,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLicenseMng.resx">
       <DependentUpon>FormLicenseMng.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FromSetting.resx">
+      <DependentUpon>FromSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
