--- a/PrintIngredientsList/app.config
+++ b/PrintIngredientsList/app.config
@@ -76,6 +76,9 @@
       <setting name="EdtFrmSplitDistance" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="DataBasePath" serializeAs="String">
+        <value />
+      </setting>
     </PrintIngredientsList.Properties.Settings>
   </userSettings>
 </configuration>
